--- a/readme.html
+++ b/readme.html
@@ -51,85 +51,48 @@ Author
 <div class="noheader firstcol">
                   |             
 ------------------|-------------
-name              | <!-- ... -->
-computer + OS     | <!-- ... -->
-time to complete  | <!-- ... -->
-partner           | <!-- ... -->
-additional help   | <!-- ... -->
+name              | David Deng
+computer + OS     | Linux Ubuntu
+time to complete  | 20 hours
+partner           | None
+additional help   | Dr. Denning
 </div>
 
 
 
+# Ray Tracing Project
 
+## Electives
 
+### Directional Light
 
-Example Section
-===================
+Directional light is implemented by adding an extra parameter to the `Light` class.
 
-<!--
-I have added example stuff below.
-Replace it with meaningful content.
--->
+Light will always be from the same direction with the same intensity no matter where it hits.
 
-Reference Images
----------------------
+#### Artifact
+![Planets](artifacts/direction_light.png)
 
+As shown, a directional light uniformly hits on all the spheres, creating an approximate scene for the planets in space lit by the sun light. Also notice that there is a shadow casted by planets that are close to each other.
 
-![A simple sphere](references/P02_01_sphere_ka.png width="200px")
+### Refraction
+Refraction is implemented using snell's law.
 
-![A room made of spheres](references/P02_02_sphere_room.png width="200px")
+#### Artifact
 
+![Refraction1](artifacts/refraction1.png)
 
-Known bugs / limitations
--------------------------
+![Refraction2](artifacts/refraction2.png)
 
-<!--
-What bugs or limitations were troublesome?
-What bugs or limitations still remain?
-Are these bugs or limitations a problem in your implementation, algorithm, or something else?
-How do you know that you did not miss a bug?
-What additional tests did you run to ensure that your implementations are correct?
--->
+As shown, The three big spheres have reflective, refractive, and diffusive properties respectively.
 
-<!-- ... -->
+### Triangle
+Triangle is implemented using Cramer's rule.
 
+#### Artifact
+![Triangle](artifacts/triangle.png)
 
-
-Reflection
-===========
-
-<!--
-Describe whatever help (if any) that you received.
-Don't include readings, lectures, but do include any help from people (including course staff, lab TAs, classmates, and friends) and attribute them by name.
-How did you discuss the problem with others? (ex: white-board algorithms, looking over code for bugs, looking at print out results, etc.)
--->
-
-<!-- ... -->
-
-
-
-<!--
-Since this is an individual assignment, if you worked with a partner, assert below that the work you are turning in is your own work, and that you only did "whiteboard" work as a group.
-Give one sentence explaining what each of you contributed.
-If you used the code from the lab challenge, explain what is shared between you and your lab partner.
--->
-
-<!-- ... -->
-
-
-
-<!--
-Describe any serious problems you encountered.
-How much time did you spend writing new code, debugging code, thinking about the algorithms, discussing with someone else, running tests, writing comments and documentation, etc.?
-List any other comments here.
-Feel free to provide any feedback on how much you learned from doing the assignment, and whether you enjoyed doing it.
--->
-
-<!-- ... -->
-
-
-
-
+As shown, a 3D Christmas tree is rendered using triangles.
 
 
 
